--- a/srcs/.env
+++ b/srcs/.env
@@ -2,7 +2,7 @@ DOMAIN_NAME=lciullo.42.fr
 
 SQL_DATABASE=x
 SQL_ROOT_PASSWORD=x
-SQL_ADMIN=x
+SQL_ADMIN=ouioui
 SQL_ADMINPASSWD=x
-SQL_USER=x
+SQL_USER=test
 SQL_USERPASSWD=x
