--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -12,7 +12,7 @@ RUN apt-get install -y php7.4 php-fpm php-mysql mariadb-client
 
 #Create directories 
 RUN mkdir -p /var/www/html/ && chown -R root:root /var/www/html
-RUN mkdir -p /run/php
+
 
 #Install wp-cli 
 RUN wget https://github.com/wp-cli/wp-cli-bundle/releases/download/v2.7.0/wp-cli-2.7.0.phar
@@ -21,8 +21,8 @@ RUN mv wp-cli-2.7.0.phar /usr/local/bin/wp
 
 #Config file 
 COPY conf/www.conf /etc/php/7.4/fpm/pool.d/www.conf
-COPY tools/script.sh /usr/local/bin/script_php.sh
-RUN chmod +x /usr/local/bin/script_php.sh
+COPY conf/script.sh /usr/local/bin/script.sh
+RUN chmod +x /usr/local/bin/script.sh
 
 #Launch wordpress 
-CMD ["./usr/local/bin/script_php.sh"]
+CMD ["./usr/local/bin/script.sh"]
