add docker compose finish and inception OK

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,8 +1,12 @@
+#DOMAINE
 DOMAIN_NAME=lciullo.42.fr
 
+#MYSQL
 SQL_DATABASE=x
-SQL_ROOT_PASSWORD=x
+SQL_ROOT_PASS=x
 SQL_ADMIN=ouioui
-SQL_ADMINPASSWD=x
-SQL_USER=test
-SQL_USERPASSWD=x
+SQL_ADMIN_PASS=x
+
+#User
+USER=test
+USER_PASS=x
