--- a/srcs/.env
+++ b/srcs/.env
@@ -1,12 +1,12 @@
 #DOMAINE
-DOMAIN_NAME=lciullo.42.fr
+DOMAIN_NAME=username.42.fr
 
 #MYSQL
-SQL_DATABASE=x
-SQL_ROOT_PASS=x
-SQL_ADMIN=ouioui
-SQL_ADMIN_PASS=x
+SQL_DATABASE=test
+SQL_ROOT_PASS=test
+SQL_ADMIN=test
+SQL_ADMIN_PASS=test
 
 #User
 USER=test
-USER_PASS=x
+USER_PASS=test
